<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest02var2</string>
    <string name="action_settings">Settings</string>
    <string name="server">SERVER</string>
    <string name="server_port">Port</string>
    <string name="connect">Connect</string>
    <string name="client">CLIENT</string>
    <string name="client_address">Address</string>
    <string name="client_port">Port</string>
    <string name="url">URL</string>

</resources>